<resources>
    <string name="app_name">scANDROID</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="create_event_text">Create Event</string>
    <string name="guest_text">Guest</string>
    <string name="my_events_text">My Events</string>
    <string name="attending_events_text">Attending Events</string>
    <string name="event_details_text">Event Details</string>
    <string name="attendees_text">Attendees</string>
    <string name="qr_code_text">QR Code</string>
    <string name="announcements_text">Announcements</string>
    <string name="location_tracking_text">Location Tracking</string>
    <string name="milestones_text">Milestones</string>
    <string name="share_button_text">Share</string>
    <string name="event_qr_codes_title_text">Event\'s QR Codes</string>
    <string name="check_in_qr_code_text">Check-In QR Code</string>
    <string name="promotion_qr_code_text">Promotion QR Code</string>
    <string name="notification_send_text">Send to all attendees</string>
    <string name="notification_title_text">Notification Title</string>
    <string name="notification_info_text">Notification Info</string>
    <string name="notification_schedule_text">Notification Time</string>
    <string name="camera_roll_confirm">Confirm</string>
    <string name="camera_roll_cancel">Cancel</string>
    <string name="home_text">Home</string>
    <string name="qr_text">QR</string>
    <string name="browse_text">Browse</string>
    <string name="notification_text">Notification</string>
    <string name="choose_an_image_text">Choose an image</string>
    <string name="your_event_text">Your Event</string>
    <string name="event_name_text">Event Name</string>
    <string name="enter_event_name_hint">Enter Event Name</string>
    <string name="event_location_text">Event Location</string>
    <string name="enter_event_location_hint">Enter Event Location</string>
    <string name="event_date_text">Event Date</string>
    <string name="enter_event_date_hint">Enter Event Date</string>
    <string name="event_description_text">Event Description</string>
    <string name="enter_event_description_hint">Enter Event Description</string>
    <string name="do_you_want_to_receive_alerts_for_important_milestones_text">Do you want to receive alerts for important milestones?</string>
    <string name="create_my_event_text">Create My Event</string>
    <string name="note_creating_an_event_will_generate_a_shareable_qr_code_that_users_can_scan_for_attendance_text">Note: Creating an event will generate a shareable QR code that users can scan for attendance</string>
    <string name="cancel_text">Cancel</string>
    <string name="check_in_time_text">Check-in Time:</string>
    <string name="attendee_name_text">Attendee Name</string>
    <string name="attendance_count_text">Attendance Count:</string>
    <string name="update_text">Update</string>
    <string name="would_you_like_to_receive_push_notifications_about_your_event_text">Would you like to receive push notifications about your event?</string>
    <string name="about_me_text">About me</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="enter_your_email_text">Enter your email</string>
    <string name="email_text">Email</string>
    <string name="change_picture_text">Change Picture</string>
    <string name="search_with_attendee_name_text">Search with attendee name</string>
    <string name="total_attendees_text">Total Attendees: 0</string>
    <string name="welcome_text">Welcome!</string>
    <string name="would_you_like_to_enter_your_name_text">Would you like to enter your name?</string>
    <string name="optional_text">(Optional)</string>
    <string name="your_name_text">Your Name</string>
    <string name="maybe_later_text">Maybe Later</string>
    <string name="enter_text">Enter</string>
    <string name="zero_counter_text">0</string>
    <string name="users_have_checked_into_your_event_text">users have checked into your event!</string>
    <string name="remove_picture_text">Remove Picture</string>
    <string name="check_in_text">Check In</string>
    <string name="allow_scandroid_to_access_your_camera_roll_text">Allow scANDROID to access your Camera Roll?</string>
    <string name="users_text">Users</string>
    <string name="events_text">Events</string>
    <string name="fragment_event_title">Event Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_with_event_name_text">Search with event name</string>
    <string name="your_name">Your Name</string>
    <string name="empty">Empty</string>
    <string name="event_time">Event Time</string>
    <string name="enter_event_date">Enter Event Date</string>
    <string name="scan_code_text">Scan QR Code</string>
    <string name="update_my_event">Update My Event</string>
    <string name="change_event_poster">Change Poster</string>
    <string name="remove_event_text">Remove Event</string>
    <string name="get_started_text">Get Started</string>
    <string name="attendee_limit_text">This event has an attendee limit</string>
    <string name="set_or_edit_an_attendee_limit">Set or edit an attendee limit</string>
    <string name="set_or_edit_attendee_limit_string">Set or Edit Attendee Limit</string>
    <string name="enter_limit_string">Enter Limit:</string>
    <string name="confirm_button_attendee_limit">Confirm</string>
    <string name="cancel_button_attendee_limit">Cancel</string>
    <string name="remove_button_attendee_limit">Remove</string>
    <string name="user_has_checked_into_your_event">user has checked into your event!</string>
    <string name="enter_whole_number">integer value</string>
    <string name="signups">SignUps</string>
    <string name="enter_event_time">Enter Event Time</string>
    <string name="time_text">Time</string>
</resources>
