<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="#FFF"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/set_limit_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/set_or_edit_attendee_limit_string"
            android:textAlignment="center"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_marginVertical="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/enter_limit_text"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter_medium"
                android:text="@string/enter_limit_string"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/enter_limit_editText"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/enter_whole_number"
                android:inputType="number"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_button_limit_attendees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_button"
                android:paddingHorizontal="5dp"
                android:text="@string/cancel_button_attendee_limit"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/remove_button_limit_attendees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_button"
                android:paddingHorizontal="5dp"
                android:text="@string/remove_button_attendee_limit"
                android:textAllCaps="false"

                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirm_button_limit_attendees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rectangle_button"
                android:paddingHorizontal="5dp"
                android:text="@string/confirm_button_attendee_limit"
                android:textAllCaps="false"
                android:textColor="@color/white"

                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>







</FrameLayout>