<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/allow_access_camera_roll_fragment"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    android:background="@drawable/rectangle_fragment"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/camera_roll_access"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:padding="10dp"
        android:text="@string/allow_scandroid_to_access_your_camera_roll_text"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/camera_roll_cancel_button"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle_button"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/camera_roll_cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/camera_roll_confirm_button"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle_button"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/camera_roll_confirm"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
